--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a href="#about">About Me</a></li>
           <li><a href="#services">Skills</a></li>
           <li><a href="#portfolio">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -153,7 +153,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Design</a></h4>
-              <p class="description">Proficient in using design platform such as Figma, Canva for creating content</p>
+              <p class="description">Proficient in using design platforms such as Figma, Canva for creating content</p>
             </div>
           </div>
 
@@ -185,61 +185,61 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
+                <a href="https://github.com/jessica-uviovo/LibraryManagementSystem" target = "_blank" title="More Details" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Library Management System</h4>
+                <p>Language: C++</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
+                <a href="https://easylearnafrica.com/" target="_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Online Learning Platform</h4>
+                <p>Hosted on Wordpress</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.png" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
+                <a href="https://github.com/jessica-uviovo/Connect-Four" target="_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Connect Four Game</h4>
+                <p>LANGUAGE: Java</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.png" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-plus-circle"></i></a>
+                <a href="https://www.youtube.com/watch?v=94K6D6kC8kE&t=2s" target = "_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Human Pose Controlled Car</h4>
+                <p>LANGUAGE: JavaScript</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -258,30 +258,30 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="https://www.youtube.com/watch?v=94K6D6kC8kE&t=2s" target="_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>App 3</h4>
                 <p>App</p>
               </div>
             </div>
-          </div>
+          </div>-->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.png" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
+                <a href="#" target = "_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Microcontroller based digital clock</h4>
+                <p>LANGUAGE: C</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -307,7 +307,7 @@
                 <p>Web</p>
               </div>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
@@ -315,12 +315,11 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Contact Us Section ======= -->
-    <section id="contact" class="contact">
+    <!--<section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Contact Us</h2>
-          <p>Contact us the get started</p>
+          <p>I'd love to chat!</p>
         </div>
 
         <div class="row">
@@ -386,14 +385,15 @@
         </div>
 
       </div>
-    </section><!-- End Contact Us Section -->
+    </section>--><!-- End Contact Us Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
+  <section id="footer">
   <footer id="footer">
 
-    <div class="footer-newsletter" data-aos="fade-up">
+    <!--<div class="footer-newsletter" data-aos="fade-up">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -405,13 +405,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact" data-aos="fade-up" data-aos-delay="100">
+          <!--<div class="col-lg-3 col-md-6 footer-contact" data-aos="fade-up" data-aos-delay="100">
             <h3>Ninestars</h3>
             <p>
               A108 Adam Street <br>
@@ -442,17 +442,16 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div>-->
 
-          <div class="col-lg-3 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="400">
-            <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <div class="col-lg col-md footer-links" data-aos="fade-up" data-aos-delay="400">
+            <h2>Connect with my socials!</h4>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
+              <a href="https://www.instagram.com/jessicauviovo/?hl=en" target = "_blank"class="instagram"><i class="bx bxl-instagram"></i></a>
+              <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+              <a href="https://www.linkedin.com/in/jessica-uviovo-0aa147200/" class="linkedin" target = "_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
 
@@ -473,6 +472,7 @@
       </div>
     </div>
   </footer><!-- End Footer -->
+</section>
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
